kubernetes/istio/rule_d.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: journal-api-destination
  namespace: journal-system
spec:
  host: journal-api-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        http1MaxPendingRequests: 5
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 3
    loadBalancer:
      simple: LEAST_CONN
